--- a/resources/config.json
+++ b/resources/config.json
@@ -3,5 +3,32 @@
 	"NUM_BOMBS": 1,
 	"NUM_REDS": 8,
 	"NUM_BLUES": 8,
-	"WORDS_FILE": "resources/words.txt"
+	"WORDS_FILE": "resources/words.txt",
+	"AVATARS": [
+		"bat",
+		"bee",
+		"cat",
+		"chicken",
+		"crocodile",
+		"dog",
+		"duck",
+		"eagle",
+		"elephant",
+		"fish",
+		"flamingo",
+		"fox",
+		"frog",
+		"money",
+		"mouse",
+		"panda",
+		"parrot",
+		"penguin",
+		"rabbit",
+		"rhino",
+		"sheep",
+		"snake",
+		"squirrel",
+		"wolf",
+		"zebra"
+	]
 }
